# stack-trader

./: .gitignore  .travis.yml  Cargo.toml  README.md  Standupcluster.md  build.sh  package-lock.json  test.sh
.kube/: alpine.yaml  component-mgr-deployment.yaml  component-mgr-service.yaml  gameloop-deployment.yaml  gameloop-service.yaml  nats-deployment.yaml  nats-service.yaml  nav-deployment.yaml  nav-service.yaml  physics-deployment.yaml  physics-service.yaml  radar-deployment.yaml  radar-service.yaml  redis-deployment.yaml  redis-service.yaml  resgate-deployment.yaml  resgate-service.yaml  shard-mgr-deployment.yaml  shard-mgr-service.yaml  stacktrader-namespace.yaml  system-mgr-deployment.yaml  system-mgr-service.yaml
bouncer/: Cargo.toml  Dockerfile  Makefile  README.md
bouncer/src/: lib.rs
genesis/: Cargo.toml  Dockerfile
genesis/src/: main.rs
genesis/worlds/: sample1.json  small.json
kube/: alpine.yaml  component-mgr-deployment.yaml  component-mgr-service.yaml  dashboard-deployment.yaml  dashboard-service.yaml  docker-compose.yml  gameloop-deployment.yaml  gameloop-service.yaml  gameui-deployment.yaml  gameui-service.yaml  genesis-deployment.yaml  ingress.yaml  leaderboard-deployment.yaml  leaderboard-service.yaml  merchant-deployment.yaml  merchant-service.yaml  mining-deployment.yaml  mining-service.yaml  nats-service.yaml  nav-deployment.yaml  nav-service.yaml  nodeport-ui-service.yaml  physics-deployment.yaml  physics-service.yaml  radar-deployment.yaml  radar-service.yaml  redis-service.yaml  resgate-deployment.yaml  resgate-service.yaml  shard-mgr-deployment.yaml  shard-mgr-service.yaml  system-mgr-deployment.yaml  system-mgr-service.yaml  ui-deployment.yaml  ui-service.yaml  user-mgr-deployment.yaml  user-mgr-service.yaml
leaderboard/: Cargo.toml  Dockerfile  Makefile  README.md
leaderboard/src/: leaderboard.rs  lib.rs
merchant/: Cargo.toml  Dockerfile  Makefile  README.md
merchant/src/: lib.rs  merchant.rs
mining/: Cargo.toml  Dockerfile  Makefile  README.md
mining/src/: lib.rs  mining.rs
navigation/: Cargo.toml  Dockerfile  Makefile  README.md
navigation/src/: lib.rs  nav.rs
physics/: Cargo.toml  Dockerfile  Makefile
physics/src/: lib.rs
radar/: Cargo.toml  Dockerfile  Makefile  README.md
radar/src/: lib.rs  radar.rs
stacktrader-types/: Cargo.toml
stacktrader-types/src/: components.rs  lib.rs
systems/: Cargo.toml
systems/physics/: Cargo.toml  Makefile  README.md
systems/physics/src/: lib.rs
testing/compose/: nginx-reverseproxy.yaml  stack-trader.yml
testing/compose/ui/: package-lock.json
testing/compose/ui/src/: _nav.js  routes.js
testing/compose/ui/src/containers/DefaultLayout/: DefaultLayout.js
testing/compose/ui/src/views/Stacktrader/: Stacktrader.js
testing/compose/web/: nginx.conf
testing/compose/web/html/: index.css  index.html  index.js
ui/: Dockerfile  README.md  nginx.conf  nginx.template  package-lock.json  package.json  start.sh
ui/public/: index.html
ui/src/: routes.js
ui/src/containers/DefaultLayout/: DefaultLayout.js
ui/src/scss/: _custom.scss
ui/src/views/Buttons/Buttons/: Buttons.js
ui/src/views/Dashboard/: Dashboard.js
ui/src/views/Pages/Login/: Login.js
ui/src/views/Pages/Register/: Register.js
ui/src/views/Plugins/Calendar/: Calendar.js
ui/src/views/Stacktrader/: Inventory.js  Radar.js  Stacktrader.js  package.json
