[package]
name = "navigation"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
waxosuit-guest = "0.3.5"
stacktrader-types = { path = "../stacktrader-types" }
serde_json = "1.0.40"
serde_derive = "1.0.100"
serde = "1.0.100"
decscloud-codec = { path = "../../decs-cloud/decscloud-codec" }
