[package]
name = "radar"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>", "Brooks Townsend <brooksmtownsend@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
waxosuit-guest = "0.3.2"
stacktrader-types = { path = "../stacktrader-types" }
serde_json = "1.0.40"
serde_derive = "1.0.100"
serde = { version = "1.0.100", features = ["derive"] }
decscloud-codec = { path = "../../decs-cloud/decscloud-codec" }
lazy_static = "1.4.0" 
