[package]
name = "radar"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>", "Brooks Townsend <brooksmtownsend@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
waxosuit-guest = "0.3.5"
stacktrader-types = { path = "../stacktrader-types" }
serde_json = "1.0.41"
serde_derive = "1.0.101"
serde = { version = "1.0.101", features = ["derive"] }
decscloud-common = "0.0.1"
lazy_static = "1.4.0" 
