[package]
name = "stacktrader-types"
version = "0.1.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decscloud-common = "0.0.1"
serde_json = "1.0.41"
serde_derive = "1.0.101"
serde = "1.0.101"
